Fix: goTo menu z-index, update: color scheme a bit

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -13,8 +13,8 @@ a {
 
 body {
     font-family: Roboto,Helvetica Neue,Helvetica,Arial,sans-serif;
-    background-color: #33373B;
-    color: white;
+    background-color: #1b1c1d;
+    color: #bbb8b8;
 }
 
 .container {
@@ -33,9 +33,9 @@ header {
   width:100%;
   height: 12%;
   display: flex;
-  background-color:#33373B;
+  background-color:#1b1c1d;
   justify-content: space-between;
-
+  z-index: 100;
   -webkit-box-shadow: 0 4px 5px #242527;
   -moz-box-shadow: 0 4px 5px #242527;
   box-shadow: 0 4px 5px #242527;
@@ -93,7 +93,7 @@ header {
 }
 
 .modal_header {
-  background: #33373B;
+  background: #1b1c1d;
   width: 100%;
   color: #ff8c00;
   display: flex;
@@ -116,11 +116,11 @@ header {
   border-top: none;
   border-left: none;
   border-right: none;
-  border-bottom-color: #33373B;
+  border-bottom-color: #1b1c1d;
 }
 
 .modal_footer {
-  border-top: 1px solid #33373B;
+  border-top: 1px solid #1b1c1d;
   width: 100%;
   display: flex;
   height: 40px;
@@ -144,7 +144,7 @@ header {
   height: 70px;
   z-index: 10;
   display: flex;
-  background-color:#33373B;
+  background-color:#1b1c1d;
   justify-content: center;
   width:100%;
 
@@ -170,7 +170,7 @@ header {
 }
 
 footer {
-  background-color:#33373B;
+  background-color:#1b1c1d;
   position: fixed;
   height: 8%;
   top:92%;
